Fitting the ANN model to the training dataset

--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "(10000, 14)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "[10000 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,22 +658,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['1.0', '0.0', '1.0', ..., '1', '1', '101348.88'],\n",
-       "       ['1.0', '0.0', '1.0', ..., '0', '1', '112542.58'],\n",
-       "       ['1.0', '0.0', '1.0', ..., '1', '0', '113931.57'],\n",
+       "array([['0.0', '0.0', '619', ..., '1', '1', '101348.88'],\n",
+       "       ['0.0', '1.0', '608', ..., '0', '1', '112542.58'],\n",
+       "       ['0.0', '0.0', '502', ..., '1', '0', '113931.57'],\n",
        "       ...,\n",
-       "       ['1.0', '0.0', '1.0', ..., '0', '1', '42085.58'],\n",
-       "       ['0.0', '1.0', '0.0', ..., '1', '0', '92888.52'],\n",
-       "       ['1.0', '0.0', '1.0', ..., '1', '0', '38190.78']], dtype='<U32')"
+       "       ['0.0', '0.0', '709', ..., '0', '1', '42085.58'],\n",
+       "       ['1.0', '0.0', '772', ..., '1', '0', '92888.52'],\n",
+       "       ['0.0', '0.0', '792', ..., '1', '0', '38190.78']], dtype='<U9')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
    "source": [
     "# One-hot encoding Geography\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "ct = ColumnTransformer([('ohe', OneHotEncoder(), [1])], remainder='passthrough') # [1] is the second column we are transforming\n",
+    "ct = ColumnTransformer([('ohe', OneHotEncoder(drop='first'), [1])], remainder='passthrough') # [1] is the second column we are transforming\n",
     "X = np.array(ct.fit_transform(X), dtype=str)\n",
     "\n",
     "# X[:, 1:]\n",
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,28 +714,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "array([[-0.5698444 ,  1.74309049,  0.16958176, ...,  0.64259497,\n",
        "        -1.03227043,  1.10643166],\n",
-       "       [-1.75486502,  1.75486502, -1.75486502, ...,  0.64259497,\n",
+       "       [ 1.75486502, -0.57369368, -2.30455945, ...,  0.64259497,\n",
        "         0.9687384 , -0.74866447],\n",
-       "       [ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "       [-0.5698444 , -0.57369368, -1.19119591, ...,  0.64259497,\n",
        "        -1.03227043,  1.48533467],\n",
        "       ...,\n",
-       "       [ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "       [-0.5698444 , -0.57369368,  0.9015152 , ...,  0.64259497,\n",
        "        -1.03227043,  1.41231994],\n",
-       "       [ 0.5698444 , -0.5698444 ,  0.5698444 , ...,  0.64259497,\n",
+       "       [-0.5698444 ,  1.74309049, -0.62420521, ...,  0.64259497,\n",
        "         0.9687384 ,  0.84432121],\n",
-       "       [-1.75486502,  1.75486502, -1.75486502, ...,  0.64259497,\n",
+       "       [ 1.75486502, -0.57369368, -0.28401079, ...,  0.64259497,\n",
        "        -1.03227043,  0.32472465]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,28 +746,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1.62776996,  1.62776996, -1.62776996, ...,  0.66011376,\n",
-       "         0.97628121,  1.62185911],\n",
-       "       [ 0.61433742, -0.61433742,  0.61433742, ...,  0.66011376,\n",
-       "        -1.02429504,  0.504204  ],\n",
-       "       [ 0.61433742, -0.61433742,  0.61433742, ...,  0.66011376,\n",
-       "         0.97628121, -0.41865644],\n",
+       "array([[ 1.75486502, -0.57369368, -0.55204276, ...,  0.64259497,\n",
+       "         0.9687384 ,  1.61085707],\n",
+       "       [-0.5698444 , -0.57369368, -1.31490297, ...,  0.64259497,\n",
+       "        -1.03227043,  0.49587037],\n",
+       "       [-0.5698444 ,  1.74309049,  0.57162971, ...,  0.64259497,\n",
+       "         0.9687384 , -0.42478674],\n",
        "       ...,\n",
-       "       [ 0.61433742, -0.61433742,  0.61433742, ...,  0.66011376,\n",
-       "        -1.02429504,  0.72775202],\n",
-       "       [-1.62776996,  1.62776996, -1.62776996, ...,  0.66011376,\n",
-       "         0.97628121, -1.54162886],\n",
-       "       [-1.62776996,  1.62776996, -1.62776996, ...,  0.66011376,\n",
-       "        -1.02429504,  1.62356528]])"
+       "       [-0.5698444 ,  1.74309049, -0.74791227, ...,  0.64259497,\n",
+       "        -1.03227043,  0.71888467],\n",
+       "       [ 1.75486502, -0.57369368, -0.00566991, ...,  0.64259497,\n",
+       "         0.9687384 , -1.54507805],\n",
+       "       [ 1.75486502, -0.57369368, -0.79945688, ...,  0.64259497,\n",
+       "        -1.03227043,  1.61255917]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -813,20 +813,12 @@
        "      <th>8</th>\n",
        "      <th>9</th>\n",
        "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.569844</td>\n",
        "      <td>-0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>1.743090</td>\n",
        "      <td>0.169582</td>\n",
        "      <td>-1.091687</td>\n",
@@ -840,11 +832,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1.754865</td>\n",
        "      <td>1.754865</td>\n",
-       "      <td>-1.754865</td>\n",
-       "      <td>-1.754865</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>-0.573694</td>\n",
        "      <td>-2.304559</td>\n",
        "      <td>0.916013</td>\n",
@@ -858,11 +846,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.569844</td>\n",
        "      <td>-0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.985604</td>\n",
        "      <td>-0.573694</td>\n",
        "      <td>-1.191196</td>\n",
        "      <td>-1.091687</td>\n",
@@ -876,11 +860,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.569844</td>\n",
        "      <td>-0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>1.743090</td>\n",
        "      <td>0.035566</td>\n",
        "      <td>0.916013</td>\n",
@@ -894,11 +874,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.569844</td>\n",
        "      <td>-0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>1.743090</td>\n",
        "      <td>2.056114</td>\n",
        "      <td>-1.091687</td>\n",
@@ -923,18 +899,10 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7995</th>\n",
-       "      <td>-1.754865</td>\n",
        "      <td>1.754865</td>\n",
-       "      <td>-1.754865</td>\n",
-       "      <td>-1.754865</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>-0.573694</td>\n",
        "      <td>-0.582970</td>\n",
        "      <td>-1.091687</td>\n",
@@ -948,11 +916,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7996</th>\n",
-       "      <td>0.569844</td>\n",
        "      <td>-0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>1.743090</td>\n",
        "      <td>1.478815</td>\n",
        "      <td>-1.091687</td>\n",
@@ -966,11 +930,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7997</th>\n",
-       "      <td>0.569844</td>\n",
        "      <td>-0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.985604</td>\n",
        "      <td>-0.573694</td>\n",
        "      <td>0.901515</td>\n",
        "      <td>0.916013</td>\n",
@@ -984,11 +944,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7998</th>\n",
-       "      <td>0.569844</td>\n",
        "      <td>-0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>0.569844</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>1.743090</td>\n",
        "      <td>-0.624205</td>\n",
        "      <td>-1.091687</td>\n",
@@ -1002,11 +958,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7999</th>\n",
-       "      <td>-1.754865</td>\n",
        "      <td>1.754865</td>\n",
-       "      <td>-1.754865</td>\n",
-       "      <td>-1.754865</td>\n",
-       "      <td>-1.014607</td>\n",
        "      <td>-0.573694</td>\n",
        "      <td>-0.284011</td>\n",
        "      <td>-1.091687</td>\n",
@@ -1020,53 +972,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8000 rows × 15 columns</p>\n",
+       "<p>8000 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            0         1         2         3         4         5         6   \\\n",
-       "0     0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  0.169582   \n",
-       "1    -1.754865  1.754865 -1.754865 -1.754865 -1.014607 -0.573694 -2.304559   \n",
-       "2     0.569844 -0.569844  0.569844  0.569844  0.985604 -0.573694 -1.191196   \n",
-       "3     0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  0.035566   \n",
-       "4     0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  2.056114   \n",
+       "0    -0.569844  1.743090  0.169582 -1.091687 -0.464608  0.006661 -1.215717   \n",
+       "1     1.754865 -0.573694 -2.304559  0.916013  0.301026 -1.377440 -0.006312   \n",
+       "2    -0.569844 -0.573694 -1.191196 -1.091687 -0.943129 -1.031415  0.579935   \n",
+       "3    -0.569844  1.743090  0.035566  0.916013  0.109617  0.006661  0.473128   \n",
+       "4    -0.569844  1.743090  2.056114 -1.091687  1.736588  1.044737  0.810193   \n",
        "...        ...       ...       ...       ...       ...       ...       ...   \n",
-       "7995 -1.754865  1.754865 -1.754865 -1.754865 -1.014607 -0.573694 -0.582970   \n",
-       "7996  0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090  1.478815   \n",
-       "7997  0.569844 -0.569844  0.569844  0.569844  0.985604 -0.573694  0.901515   \n",
-       "7998  0.569844 -0.569844  0.569844  0.569844 -1.014607  1.743090 -0.624205   \n",
-       "7999 -1.754865  1.754865 -1.754865 -1.754865 -1.014607 -0.573694 -0.284011   \n",
+       "7995  1.754865 -0.573694 -0.582970 -1.091687 -0.656016 -0.339364  0.703104   \n",
+       "7996 -0.569844  1.743090  1.478815 -1.091687 -1.613058 -0.339364  0.613060   \n",
+       "7997 -0.569844 -0.573694  0.901515  0.916013 -0.368904  0.006661  1.361474   \n",
+       "7998 -0.569844  1.743090 -0.624205 -1.091687 -0.081791  1.390762 -1.215717   \n",
+       "7999  1.754865 -0.573694 -0.284011 -1.091687  0.875251 -1.377440  0.511364   \n",
        "\n",
-       "            7         8         9         10        11        12        13  \\\n",
-       "0    -1.091687 -0.464608  0.006661 -1.215717  0.809503  0.642595 -1.032270   \n",
-       "1     0.916013  0.301026 -1.377440 -0.006312 -0.921591  0.642595  0.968738   \n",
-       "2    -1.091687 -0.943129 -1.031415  0.579935 -0.921591  0.642595 -1.032270   \n",
-       "3     0.916013  0.109617  0.006661  0.473128 -0.921591  0.642595 -1.032270   \n",
-       "4    -1.091687  1.736588  1.044737  0.810193  0.809503  0.642595  0.968738   \n",
-       "...        ...       ...       ...       ...       ...       ...       ...   \n",
-       "7995 -1.091687 -0.656016 -0.339364  0.703104  0.809503  0.642595  0.968738   \n",
-       "7996 -1.091687 -1.613058 -0.339364  0.613060 -0.921591  0.642595  0.968738   \n",
-       "7997  0.916013 -0.368904  0.006661  1.361474  0.809503  0.642595 -1.032270   \n",
-       "7998 -1.091687 -0.081791  1.390762 -1.215717  0.809503  0.642595  0.968738   \n",
-       "7999 -1.091687  0.875251 -1.377440  0.511364 -0.921591  0.642595 -1.032270   \n",
+       "            7         8         9         10  \n",
+       "0     0.809503  0.642595 -1.032270  1.106432  \n",
+       "1    -0.921591  0.642595  0.968738 -0.748664  \n",
+       "2    -0.921591  0.642595 -1.032270  1.485335  \n",
+       "3    -0.921591  0.642595 -1.032270  1.276528  \n",
+       "4     0.809503  0.642595  0.968738  0.558378  \n",
+       "...        ...       ...       ...       ...  \n",
+       "7995  0.809503  0.642595  0.968738  1.091330  \n",
+       "7996 -0.921591  0.642595  0.968738  0.131760  \n",
+       "7997  0.809503  0.642595 -1.032270  1.412320  \n",
+       "7998  0.809503  0.642595  0.968738  0.844321  \n",
+       "7999 -0.921591  0.642595 -1.032270  0.324725  \n",
        "\n",
-       "            14  \n",
-       "0     1.106432  \n",
-       "1    -0.748664  \n",
-       "2     1.485335  \n",
-       "3     1.276528  \n",
-       "4     0.558378  \n",
-       "...        ...  \n",
-       "7995  1.091330  \n",
-       "7996  0.131760  \n",
-       "7997  1.412320  \n",
-       "7998  0.844321  \n",
-       "7999  0.324725  \n",
-       "\n",
-       "[8000 rows x 15 columns]"
+       "[8000 rows x 11 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,18 +1016,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-21 19:07:31.258885: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Building Neural Network\n",
     "from keras.models import Sequential # near stack of layers, meaning we build the network layer by layer in sequence.\n",
@@ -1103,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,11 +1053,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifier.compile(optimizer='adam', loss='binary_crossentropy', metrics =['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.5698444   1.74309049  0.16958176 -1.09168714 -0.46460796  0.00666099\n",
+      "  -1.21571749  0.8095029   0.64259497 -1.03227043  1.10643166]\n",
+      " [ 1.75486502 -0.57369368 -2.30455945  0.91601335  0.30102557 -1.37744033\n",
+      "  -0.00631193 -0.92159124  0.64259497  0.9687384  -0.74866447]\n",
+      " [-0.5698444  -0.57369368 -1.19119591 -1.09168714 -0.94312892 -1.031415\n",
+      "   0.57993469 -0.92159124  0.64259497 -1.03227043  1.48533467]\n",
+      " [-0.5698444   1.74309049  0.03556578  0.91601335  0.10961719  0.00666099\n",
+      "   0.47312769 -0.92159124  0.64259497 -1.03227043  1.27652776]\n",
+      " [-0.5698444   1.74309049  2.05611444 -1.09168714  1.73658844  1.04473698\n",
+      "   0.8101927   0.8095029   0.64259497  0.9687384   0.55837842]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train[:5]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feed dataset to our model\n",
+    "classifier.fit(X_train, y_train, batch_size = 10, epochs = 100)"
    ]
   },
   {
