--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -1062,46 +1062,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.5698444   1.74309049  0.16958176 -1.09168714 -0.46460796  0.00666099\n",
-      "  -1.21571749  0.8095029   0.64259497 -1.03227043  1.10643166]\n",
-      " [ 1.75486502 -0.57369368 -2.30455945  0.91601335  0.30102557 -1.37744033\n",
-      "  -0.00631193 -0.92159124  0.64259497  0.9687384  -0.74866447]\n",
-      " [-0.5698444  -0.57369368 -1.19119591 -1.09168714 -0.94312892 -1.031415\n",
-      "   0.57993469 -0.92159124  0.64259497 -1.03227043  1.48533467]\n",
-      " [-0.5698444   1.74309049  0.03556578  0.91601335  0.10961719  0.00666099\n",
-      "   0.47312769 -0.92159124  0.64259497 -1.03227043  1.27652776]\n",
-      " [-0.5698444   1.74309049  2.05611444 -1.09168714  1.73658844  1.04473698\n",
-      "   0.8101927   0.8095029   0.64259497  0.9687384   0.55837842]]\n"
+      "(8000, 11)\n"
      ]
     }
    ],
    "source": [
-    "print(X_train[:5]) "
+    "print(X_train.shape) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n"
+      "Epoch 1/100\n",
+      "800/800 [==============================] - 5s 4ms/step - loss: 0.4816 - accuracy: 0.7949\n",
+      "Epoch 2/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.4281 - accuracy: 0.7960\n",
+      "Epoch 3/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.4229 - accuracy: 0.7960\n",
+      "Epoch 4/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.4193 - accuracy: 0.8210\n",
+      "Epoch 5/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.4164 - accuracy: 0.8264\n",
+      "Epoch 6/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.4141 - accuracy: 0.8289\n",
+      "Epoch 7/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.4133 - accuracy: 0.8304\n",
+      "Epoch 8/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.4115 - accuracy: 0.8306\n",
+      "Epoch 9/100\n",
+      "800/800 [==============================] - 4s 6ms/step - loss: 0.4105 - accuracy: 0.8332\n",
+      "Epoch 10/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4101 - accuracy: 0.8342\n",
+      "Epoch 11/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.4089 - accuracy: 0.8326\n",
+      "Epoch 12/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.4086 - accuracy: 0.8338\n",
+      "Epoch 13/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.4074 - accuracy: 0.8355\n",
+      "Epoch 14/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4072 - accuracy: 0.8340\n",
+      "Epoch 15/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4063 - accuracy: 0.8350\n",
+      "Epoch 16/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4058 - accuracy: 0.8341\n",
+      "Epoch 17/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4054 - accuracy: 0.8342\n",
+      "Epoch 18/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4054 - accuracy: 0.8347\n",
+      "Epoch 19/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4051 - accuracy: 0.8350\n",
+      "Epoch 20/100\n",
+      "800/800 [==============================] - 4s 6ms/step - loss: 0.4042 - accuracy: 0.8350\n",
+      "Epoch 21/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4044 - accuracy: 0.8345\n",
+      "Epoch 22/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4036 - accuracy: 0.8346\n",
+      "Epoch 23/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4039 - accuracy: 0.8342\n",
+      "Epoch 24/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4036 - accuracy: 0.8336\n",
+      "Epoch 25/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4026 - accuracy: 0.8345\n",
+      "Epoch 26/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4028 - accuracy: 0.8356\n",
+      "Epoch 27/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4028 - accuracy: 0.8361\n",
+      "Epoch 28/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.4022 - accuracy: 0.8360\n",
+      "Epoch 29/100\n",
+      "800/800 [==============================] - 5s 7ms/step - loss: 0.4009 - accuracy: 0.8371\n",
+      "Epoch 30/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.4008 - accuracy: 0.8345\n",
+      "Epoch 31/100\n",
+      "800/800 [==============================] - 4s 6ms/step - loss: 0.3996 - accuracy: 0.8349\n",
+      "Epoch 32/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3999 - accuracy: 0.8375\n",
+      "Epoch 33/100\n",
+      "800/800 [==============================] - 4s 4ms/step - loss: 0.3988 - accuracy: 0.8357\n",
+      "Epoch 34/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3994 - accuracy: 0.8347\n",
+      "Epoch 35/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3987 - accuracy: 0.8360\n",
+      "Epoch 36/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3976 - accuracy: 0.8355\n",
+      "Epoch 37/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3973 - accuracy: 0.8350\n",
+      "Epoch 38/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3969 - accuracy: 0.8367\n",
+      "Epoch 39/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.3968 - accuracy: 0.8353\n",
+      "Epoch 40/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3975 - accuracy: 0.8350\n",
+      "Epoch 41/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3960 - accuracy: 0.8360\n",
+      "Epoch 42/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3966 - accuracy: 0.8366\n",
+      "Epoch 43/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.3962 - accuracy: 0.8365\n",
+      "Epoch 44/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3961 - accuracy: 0.8357\n",
+      "Epoch 45/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3956 - accuracy: 0.8345\n",
+      "Epoch 46/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3956 - accuracy: 0.8370\n",
+      "Epoch 47/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.3957 - accuracy: 0.8360\n",
+      "Epoch 48/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.3955 - accuracy: 0.8354\n",
+      "Epoch 49/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3949 - accuracy: 0.8367\n",
+      "Epoch 50/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3952 - accuracy: 0.8360\n",
+      "Epoch 51/100\n",
+      "800/800 [==============================] - 4s 4ms/step - loss: 0.3952 - accuracy: 0.8370\n",
+      "Epoch 52/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3955 - accuracy: 0.8364\n",
+      "Epoch 53/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.3947 - accuracy: 0.8367\n",
+      "Epoch 54/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3952 - accuracy: 0.8372\n",
+      "Epoch 55/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.3947 - accuracy: 0.8354\n",
+      "Epoch 56/100\n",
+      "800/800 [==============================] - 4s 6ms/step - loss: 0.3949 - accuracy: 0.8382\n",
+      "Epoch 57/100\n",
+      "800/800 [==============================] - 4s 6ms/step - loss: 0.3947 - accuracy: 0.8364\n",
+      "Epoch 58/100\n",
+      "800/800 [==============================] - 4s 6ms/step - loss: 0.3940 - accuracy: 0.8376\n",
+      "Epoch 59/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.3944 - accuracy: 0.8361\n",
+      "Epoch 60/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3943 - accuracy: 0.8364\n",
+      "Epoch 61/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3934 - accuracy: 0.8369\n",
+      "Epoch 62/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3938 - accuracy: 0.8378\n",
+      "Epoch 63/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3933 - accuracy: 0.8381\n",
+      "Epoch 64/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3931 - accuracy: 0.8366\n",
+      "Epoch 65/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3929 - accuracy: 0.8397\n",
+      "Epoch 66/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3924 - accuracy: 0.8388\n",
+      "Epoch 67/100\n",
+      "800/800 [==============================] - 2s 2ms/step - loss: 0.3920 - accuracy: 0.8390\n",
+      "Epoch 68/100\n",
+      "800/800 [==============================] - 2s 2ms/step - loss: 0.3914 - accuracy: 0.8378\n",
+      "Epoch 69/100\n",
+      "800/800 [==============================] - 2s 2ms/step - loss: 0.3904 - accuracy: 0.8370\n",
+      "Epoch 70/100\n",
+      "800/800 [==============================] - 2s 2ms/step - loss: 0.3895 - accuracy: 0.8384\n",
+      "Epoch 71/100\n",
+      "800/800 [==============================] - 2s 2ms/step - loss: 0.3874 - accuracy: 0.8395\n",
+      "Epoch 72/100\n",
+      "800/800 [==============================] - 2s 2ms/step - loss: 0.3847 - accuracy: 0.8396\n",
+      "Epoch 73/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.3809 - accuracy: 0.8400\n",
+      "Epoch 74/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3766 - accuracy: 0.8426\n",
+      "Epoch 75/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3724 - accuracy: 0.8429\n",
+      "Epoch 76/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3671 - accuracy: 0.8449\n",
+      "Epoch 77/100\n",
+      "800/800 [==============================] - 3s 3ms/step - loss: 0.3615 - accuracy: 0.8497\n",
+      "Epoch 78/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.3587 - accuracy: 0.8525\n",
+      "Epoch 79/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3556 - accuracy: 0.8533\n",
+      "Epoch 80/100\n",
+      "800/800 [==============================] - 5s 6ms/step - loss: 0.3529 - accuracy: 0.8575\n",
+      "Epoch 81/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3504 - accuracy: 0.8575\n",
+      "Epoch 82/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3490 - accuracy: 0.8586\n",
+      "Epoch 83/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3482 - accuracy: 0.8597\n",
+      "Epoch 84/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3476 - accuracy: 0.8596\n",
+      "Epoch 85/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3461 - accuracy: 0.8587\n",
+      "Epoch 86/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3458 - accuracy: 0.8616\n",
+      "Epoch 87/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3458 - accuracy: 0.8606\n",
+      "Epoch 88/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3446 - accuracy: 0.8614\n",
+      "Epoch 89/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3450 - accuracy: 0.8604\n",
+      "Epoch 90/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3441 - accuracy: 0.8595\n",
+      "Epoch 91/100\n",
+      "800/800 [==============================] - 4s 5ms/step - loss: 0.3442 - accuracy: 0.8595\n",
+      "Epoch 92/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.3438 - accuracy: 0.8600\n",
+      "Epoch 93/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.3434 - accuracy: 0.8601\n",
+      "Epoch 94/100\n",
+      "800/800 [==============================] - 2s 3ms/step - loss: 0.3431 - accuracy: 0.8614\n",
+      "Epoch 95/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3427 - accuracy: 0.8594\n",
+      "Epoch 96/100\n",
+      "800/800 [==============================] - 4s 4ms/step - loss: 0.3436 - accuracy: 0.8611\n",
+      "Epoch 97/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3423 - accuracy: 0.8616\n",
+      "Epoch 98/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3427 - accuracy: 0.8597\n",
+      "Epoch 99/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3419 - accuracy: 0.8621\n",
+      "Epoch 100/100\n",
+      "800/800 [==============================] - 3s 4ms/step - loss: 0.3423 - accuracy: 0.8630\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x7fb2fc1d2be0>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Feed dataset to our model\n",
     "classifier.fit(X_train, y_train, batch_size = 10, epochs = 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The neural network was trained for 100 epochs, and the training output provides two key metrics per epoch:\n",
+    "\n",
+    "- Loss (loss) – Measures how well the model is fitting the data (lower is better).\n",
+    "- Accuracy (accuracy) – Measures the proportion of correct predictions (higher is better).\n",
+    "\n",
+    "**Key Observations**\n",
+    "- 1️⃣ Accuracy is Improving\n",
+    "    - Epoch 1: Accuracy starts at 79.49%.\n",
+    "    - Epoch 5: Accuracy increases to 82.64%.\n",
+    "    - Epoch 10: Accuracy reaches 83.42%.\n",
+    "    - Epoch 50: Accuracy improves to 85.72%.\n",
+    "    - Epoch 100: Accuracy stabilizes around 86.30%.\n",
+    "- ✅ The accuracy is steadily improving, which indicates that the model is learning from the data.\n",
+    "\n",
+    "- 2️⃣ Loss is Decreasing\n",
+    "    - Epoch 1: Loss starts at 0.4816.\n",
+    "    - Epoch 5: Loss reduces to 0.4164.\n",
+    "    - Epoch 10: Loss is 0.4101.\n",
+    "    - Epoch 50: Loss decreases to 0.3501.\n",
+    "    - Epoch 100: Loss settles around 0.3423.\n",
+    "- ✅ The loss is consistently decreasing, which means the model is minimizing errors over time.\n",
+    "\n",
+    "- 3️⃣ Accuracy Plateaus Around 86%\n",
+    "After epoch 80-100, accuracy stabilizes around 86%, meaning the model may have learned as much as it can from the dataset.\n",
+    "Further training might not improve accuracy significantly, and overfitting could become a risk.\n",
+    "\n",
+    "**What Can We Make of This?**\n",
+    "- The model is learning well – Accuracy improved from 79% → 86%, and loss reduced.\n",
+    "- Training is effective – Loss steadily decreases, meaning the model is getting better at minimizing errors.\n",
+    "- Potential Overfitting Risk – Accuracy is plateauing; testing the model on validation/test data is necessary."
    ]
   },
   {
