Plot accuracy and loss curves

--- a/bank_prediction_model.ipynb
+++ b/bank_prediction_model.ipynb
@@ -1342,10 +1342,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63/63 [==============================] - 1s 3ms/step - loss: 0.3404 - accuracy: 0.8570\n",
+      "Test accuracy:  0.8570\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check model generalization\n",
+    "test_loss, test_accuracy = classifier.evaluate(X_test, y_test)\n",
+    "print(f\"Test accuracy: {test_accuracy: .4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot accuracy and loss curves\n",
+    "history = classifier.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=100, batch_size=10, verbose=1)\n",
+    "\n",
+    "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+    "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
