Reshape the data

--- a/handwritting_digit_recognition.ipynb
+++ b/handwritting_digit_recognition.ipynb
@@ -39,8 +39,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 28, 28)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load the data\n",
+    "(X_train, y_train),(X_test, y_test) = mnist.load_data()\n",
+    "X_train.shape # 60,000 images of size 28x28 (grayscale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reshape the data\n",
+    "# CNNs expect images in the format: (batch_size, height, width, channels)\n",
+    "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], X_train.shape[2],1)\n"
+   ]
   }
  ],
  "metadata": {
