Normalize the pixel values

--- a/handwritting_digit_recognition.ipynb
+++ b/handwritting_digit_recognition.ipynb
@@ -131,6 +131,376 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]],\n",
+       "\n",
+       "        [[0.],\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         ...,\n",
+       "         [0.],\n",
+       "         [0.],\n",
+       "         [0.]]]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y train: [5 0 4 ... 5 6 8]\n",
+      "Y test: [7 2 1 ... 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Y train: {y_train}\")\n",
+    "print(f\"Y test: {y_test}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Conv2D(32,(3,3),activation='relu', input_shape=(28,28,1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "model = Sequential()\n",
+    "- Creates a sequential model where layers are stacked in order.\n",
+    "- This means each layer’s output becomes the input for the next layer.\n",
+    "\n",
+    "Conv2D(32, (3,3), activation='relu', input_shape=(28,28,1))\n",
+    "- 32 -> Number of filters (kernels) in the layer. Each filter detects different features (edges, shapes, textures).\n",
+    "- (3,3) -> Size of each filter (3×3 pixels). This means the filter scans 3×3 pixel sections of the image.\n",
+    "- activation='relu' - Uses ReLU (Rectified Linear Unit) to introduce non-linearity, keeping only positive values.\n",
+    "- input_shape=(28,28,1) - Defines the input image dimensions: 28×28 pixels, 1 channel (grayscale)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
