--- a/handwritting_digit_recognition.ipynb
+++ b/handwritting_digit_recognition.ipynb
@@ -499,6 +499,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply max pooling\n",
+    "model.add(MaxPool2D(2,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add fully connected layer\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(100, activation='relu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
