Machine learning intro

--- a/Tensorflow/notebook.ipynb
+++ b/Tensorflow/notebook.ipynb
@@ -18,7 +18,7 @@
     "- Anomaly detection -> fraud detection\n",
     "\n",
     "ML Types:\n",
-    "- Supervised learning -> Use labelled data to train a model to predict labels for new data. Requires a lot of labelled data thus expensive and time consuming.\n",
+    "- Supervised learning -> Use labelled data to train a model to predict labels for new data. Requires a lot of labelled data thus expensive and time consuming. Here we have regression(for continous values) and classification (for discrete values)\n",
     "- Unsupervised learning -> unlabeled data is used to discover patterns or structure in the data. Ex. Clustering customers based on their preference and behaviours. Useful for EDA, Dimensionality reduction, anomaly detection and generative modelling. It is scalable and flexible.\n",
     "- Reinforcement learning -> Agent interacts with an environment and learn from its own actions and rewards. It learns from trial and error, it is complex and unstable and depends on the design of the agent, environment, the action and the reward. Application - Robotics, gaming, self-driving cars\n",
     "\n",
@@ -75,6 +75,8 @@
     "* Set of protocols, routines and tools for building software applications\n",
     "* It allows applications to communicate with each other, share data  and perform various tasks.\n",
     "* Types: REST, SOAP and GraphQL\n",
+    "\n",
+    "Tensorflow APIs: Keras, tensorflow lite, tensorflow js, tensorflow extended.\n",
     "\n",
     "\n",
     "\n",
